overflow fixed

--- a/src/style.css
+++ b/src/style.css
@@ -556,6 +556,14 @@ video {
   top: 6rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -624,6 +632,10 @@ video {
   height: 6rem;
 }
 
+.h-\[390px\] {
+  height: 390px;
+}
+
 .h-\[400px\] {
   height: 400px;
 }
@@ -646,6 +658,10 @@ video {
 
 .w-\[320px\] {
   width: 320px;
+}
+
+.w-\[390px\] {
+  width: 390px;
 }
 
 .w-\[400px\] {
@@ -747,14 +763,19 @@ video {
   padding-right: 1.5rem;
 }
 
-.py-11 {
-  padding-top: 2.75rem;
-  padding-bottom: 2.75rem;
+.py-28 {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
 }
 
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .pt-4 {
@@ -820,6 +841,78 @@ video {
 
 .transition-none {
   transition-property: none;
+}
+
+.\[zoom\:1\.1\] {
+  zoom: 1.1;
+}
+
+.\[zoom\:3\] {
+  zoom: 3;
+}
+
+.\[zoom\:1\] {
+  zoom: 1;
+}
+
+.\[zoom\:2\] {
+  zoom: 2;
+}
+
+.\[zoom\:2\.2\] {
+  zoom: 2.2;
+}
+
+.\[zoom\:1\2c 5\] {
+  zoom: 1,5;
+}
+
+.\[zoom\:1\.7\] {
+  zoom: 1.7;
+}
+
+.\[zoom\:1\.8\] {
+  zoom: 1.8;
+}
+
+.\[zoom\:1\.5\] {
+  zoom: 1.5;
+}
+
+.\[zoom\:1\.6\] {
+  zoom: 1.6;
+}
+
+.\[zoom\:1\.3\] {
+  zoom: 1.3;
+}
+
+.\[zoom\:1\.2\] {
+  zoom: 1.2;
+}
+
+.\[zoom\:0\.5\] {
+  zoom: 0.5;
+}
+
+.\[zoom\:0\.7\] {
+  zoom: 0.7;
+}
+
+.\[zoom\:0\.6\] {
+  zoom: 0.6;
+}
+
+.\[zoom\:0\.2\] {
+  zoom: 0.2;
+}
+
+.\[zoom\:0\.\] {
+  zoom: 0.;
+}
+
+.\[zoom\:0\.9\] {
+  zoom: 0.9;
 }
 
 * {
@@ -983,8 +1076,9 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:ml-20 {
-    margin-left: 5rem;
+  .md\:my-48 {
+    margin-top: 12rem;
+    margin-bottom: 12rem;
   }
 
   .md\:ml-24 {
@@ -1009,6 +1103,56 @@ body {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
+  .md\:py-32 {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+
+  .md\:py-36 {
+    padding-top: 9rem;
+    padding-bottom: 9rem;
+  }
+
+  .md\:py-40 {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
+
+  .md\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .md\:py-48 {
+    padding-top: 12rem;
+    padding-bottom: 12rem;
+  }
+
+  .md\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .md\:py-7 {
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
+  }
+
+  .md\:py-5 {
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+
+  .md\:py-6 {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1016,6 +1160,10 @@ body {
 }
 
 @media (min-width: 1024px) {
+  .lg\:ml-20 {
+    margin-left: 5rem;
+  }
+
   .lg\:ml-36 {
     margin-left: 9rem;
   }
@@ -1069,6 +1217,16 @@ body {
     padding-bottom: 9rem;
   }
 
+  .lg\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+
+  .lg\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
   .lg\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -1077,6 +1235,22 @@ body {
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:\[zoom\:1\.5\] {
+    zoom: 1.5;
+  }
+
+  .lg\:\[zoom\:4\] {
+    zoom: 4;
+  }
+
+  .lg\:\[zoom\:3\] {
+    zoom: 3;
+  }
+
+  .lg\:\[zoom\:1\] {
+    zoom: 1;
   }
 }
 
@@ -1108,6 +1282,26 @@ body {
   .xl\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .xl\:\[zoom\:1\.\] {
+    zoom: 1.;
+  }
+
+  .xl\:\[zoom\:1\.3\] {
+    zoom: 1.3;
+  }
+
+  .xl\:\[zoom\:1\.4\] {
+    zoom: 1.4;
+  }
+
+  .xl\:\[zoom\:1\.5\] {
+    zoom: 1.5;
+  }
+
+  .xl\:\[zoom\:1\.2\] {
+    zoom: 1.2;
   }
 }
 
